--- a/src/gui/view/ViewSobre.fxml
+++ b/src/gui/view/ViewSobre.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane cacheShape="false" centerShape="false" layoutX="-3.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="408.0" prefWidth="720.0" scaleShape="false" style="-fx-background-color: #2c2e33; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" stylesheets="@css/styleLogin.css">
+      <AnchorPane cacheShape="false" centerShape="false" layoutX="-3.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="408.0" prefWidth="800.0" scaleShape="false" style="-fx-background-color: #2c2e33; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" stylesheets="@css/styleLogin.css">
          <children>
             <Pane layoutX="-134.0" layoutY="-118.0" prefHeight="479.0" prefWidth="392.0" rotate="15.0" style="-fx-background-color: #545E6A; -fx-border-color: ff5b5b; -fx-border-width: 8; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
                <children>
@@ -26,7 +26,7 @@
                   </ImageView>
                </children>
             </Pane>
-            <AnchorPane layoutX="293.0" layoutY="44.0" minHeight="-Infinity" minWidth="-Infinity" opacity="0.18" prefHeight="333.0" prefWidth="410.0" style="-fx-background-color: white; -fx-background-radius: 2em; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
+            <AnchorPane layoutX="293.0" layoutY="44.0" minHeight="-Infinity" minWidth="-Infinity" opacity="0.18" prefHeight="333.0" prefWidth="493.0" style="-fx-background-color: white; -fx-background-radius: 2em; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
             <Label layoutX="314.0" layoutY="89.0" text="JEF v2.5®" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="24.0" />
@@ -37,12 +37,12 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <JFXTextArea editable="false" focusColor="WHITE" layoutX="312.0" layoutY="150.0" prefHeight="59.0" prefWidth="382.0" style="-fx-text-fill: white;" text="JEF é distribuído sob a licença GNU LGPL version v2.1 e inclui softwares de código aberto sob uma variedade de outras licenças." unFocusColor="WHITE">
+            <JFXTextArea editable="false" focusColor="WHITE" layoutX="312.0" layoutY="150.0" prefHeight="59.0" prefWidth="459.0" style="-fx-text-fill: white;" text="JEF é distribuído sob a licença GNU LGPL version v2.1 e inclui softwares de código aberto sob uma variedade de outras licenças." unFocusColor="WHITE">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXTextArea>
-            <Label layoutX="408.0" layoutY="222.0" text="Leonardo Petta do Nascimento" textFill="WHITE">
+            <Label layoutX="463.0" layoutY="224.0" text="Leonardo Petta do Nascimento" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -52,13 +52,13 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Hyperlink layoutX="382.0" layoutY="252.0" text="leonardo.petta.nascimento" textFill="WHITE" />
+            <Hyperlink layoutX="382.0" layoutY="252.0" text="https://www.facebook.com/leonardo.petta.nascimento" textFill="WHITE" />
             <Label layoutX="323.0" layoutY="278.0" text="Linkedin:" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Hyperlink layoutX="382.0" layoutY="274.0" text="Leonardo Petta Do Nascimento" textFill="WHITE" />
+            <Hyperlink layoutX="382.0" layoutY="274.0" text="https://www.linkedin.com/in/leonardo-petta-do-nascimento-75674015b/" textFill="WHITE" />
             <Label layoutX="342.0" layoutY="299.0" text="Email:" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="13.0" />
@@ -70,7 +70,7 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Hyperlink layoutX="382.0" layoutY="318.0" text="leonardopn" textFill="WHITE" />
+            <Hyperlink layoutX="382.0" layoutY="318.0" text="https://github.com/leonardopn" textFill="WHITE" />
          </children>
       </AnchorPane>
    </children>
