--- a/src/gui/views/ViewFuncionario.fxml
+++ b/src/gui/views/ViewFuncionario.fxml
@@ -1,71 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="600.0" maxWidth="500.0" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewFuncionarioController">
+<AnchorPane maxHeight="600.0" maxWidth="924.0" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="924.0" stylesheets="@css/styleTabFuncionario.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewFuncionarioController">
    <children>
-      <Label layoutX="113.0" layoutY="63.0" text="Digite os dados do novo funcionario">
-         <font>
-            <Font name="Arial Bold" size="15.0" />
-         </font>
-      </Label>
-      <TableView fx:id="tvFuncionario" layoutX="9.0" layoutY="232.0" prefHeight="297.0" prefWidth="481.0">
-        <columns>
-          <TableColumn fx:id="colunaCpf" minWidth="0.0" prefWidth="123.0" text="CPF" />
-          <TableColumn fx:id="colunaNome" prefWidth="190.0" text="Nome" />
-            <TableColumn fx:id="colunaTelefone" prefWidth="102.0" text="Telefone" />
-            <TableColumn fx:id="colunaSelect" minWidth="9.0" prefWidth="65.0" text="Excluir?" />
-        </columns>
-      </TableView>
-      <Label layoutX="100.0" layoutY="529.0" prefHeight="16.0" prefWidth="300.0" text="Selecione os funcionários na coluna &quot;Excluir&quot; " />
-      <Line endX="650.0" endY="6.0" layoutX="-150.0" layoutY="41.0" startX="150.2928466796875" startY="6.0" stroke="#827f7f" />
-      <Button fx:id="btAtualizar" layoutX="406.0" layoutY="12.0" mnemonicParsing="false" onAction="#atualizaFuncionario" prefHeight="26.0" prefWidth="80.0" text="Atualizar" />
-      <GridPane layoutX="72.0" layoutY="98.0" prefHeight="122.0" prefWidth="328.0" vgap="10.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="47.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="10.0" prefWidth="253.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label prefHeight="17.0" prefWidth="36.0" text="CPF:" />
-            <Label text="Nome:" GridPane.rowIndex="1" />
-            <TextField fx:id="txtCpfFuncionario" prefHeight="26.0" prefWidth="185.0" promptText="CPF do funcionário" GridPane.columnIndex="1" />
-            <TextField fx:id="txtNomeFuncionario" prefHeight="26.0" prefWidth="188.0" promptText="Nome do funcionário" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="txtTelefoneFuncionario" prefHeight="38.0" prefWidth="255.0" promptText="Telefone funcionário" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Button fx:id="btCriaFuncionario" mnemonicParsing="false" onAction="#onBtCriaFuncionarioAction" text="Criar" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
-            <Label text="Telefone:" GridPane.rowIndex="2" />
-         </children>
-      </GridPane>
-      <Label layoutX="117.0" layoutY="545.0" text="e aperte o botão abaixo para deleta-los!" />
-      <Button fx:id="btExcluiFuncionario" layoutX="217.0" layoutY="565.0" mnemonicParsing="false" onAction="#excluirFuncionario" text="Excluir" />
-      <GridPane layoutX="371.0" layoutY="538.0" prefHeight="61.0" prefWidth="118.0">
-        <columnConstraints>
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <ProgressIndicator fx:id="piStatus" prefHeight="26.0" prefWidth="36.0" visible="false" />
-            <Label fx:id="labelStatus" alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="134.0" text="Label" textAlignment="CENTER" visible="false" GridPane.rowIndex="1" />
-         </children>
-      </GridPane>
+      <TabPane layoutX="-5.0" layoutY="-5.0" prefHeight="607.0" prefWidth="742.0" side="LEFT" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab>
+            <content>
+              <AnchorPane fx:id="tabFuncionarioAp" minHeight="0.0" minWidth="0.0" prefHeight="650.0" prefWidth="669.0">
+                     <children>
+                        <GridPane layoutX="301.0" layoutY="71.0" prefHeight="122.0" prefWidth="328.0" vgap="10.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="47.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="10.0" prefWidth="253.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label prefHeight="17.0" prefWidth="36.0" text="CPF:" />
+                              <Label text="Nome:" GridPane.rowIndex="1" />
+                              <TextField fx:id="txtCpfFuncionario" prefHeight="26.0" prefWidth="185.0" promptText="CPF do funcionário" GridPane.columnIndex="1" />
+                              <TextField fx:id="txtNomeFuncionario" prefHeight="26.0" prefWidth="188.0" promptText="Nome do funcionário" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField fx:id="txtTelefoneFuncionario" prefHeight="38.0" prefWidth="255.0" promptText="Telefone funcionário" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Button fx:id="btCriaFuncionario" mnemonicParsing="false" onAction="#onBtCriaFuncionarioAction" text="Criar" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+                              <Label text="Telefone:" GridPane.rowIndex="2" />
+                           </children>
+                        </GridPane>
+                        <TableView fx:id="tvFuncionario" layoutX="117.0" layoutY="293.0" prefHeight="297.0" prefWidth="481.0">
+                          <columns>
+                            <TableColumn fx:id="colunaCpf" minWidth="0.0" prefWidth="123.0" text="CPF" />
+                            <TableColumn fx:id="colunaNome" prefWidth="190.0" text="Nome" />
+                              <TableColumn fx:id="colunaTelefone" prefWidth="102.0" text="Telefone" />
+                              <TableColumn fx:id="colunaSelect" minWidth="9.0" prefWidth="65.0" text="Excluir?" />
+                          </columns>
+                        </TableView>
+                        <Button fx:id="btExcluiFuncionario" layoutX="573.0" layoutY="288.0" mnemonicParsing="false" onAction="#excluirFuncionario" text="Excluir" />
+                        <GridPane layoutX="514.0" layoutY="411.0" prefHeight="61.0" prefWidth="118.0">
+                          <columnConstraints>
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <ProgressIndicator fx:id="piStatus" prefHeight="26.0" prefWidth="36.0" visible="false" />
+                              <Label fx:id="labelStatus" alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="134.0" text="Label" textAlignment="CENTER" visible="false" GridPane.rowIndex="1" />
+                           </children>
+                        </GridPane>
+                        <JFXTextField fx:id="txtNomeFuncionario" focusColor="WHITE" layoutX="84.0" layoutY="157.0" promptText="Nome do Funcionário" />
+                        <JFXTextField fx:id="txtCpfFuncionario" focusColor="WHITE" layoutX="84.0" layoutY="96.0" promptText="CPF funcionário">
+                           <font>
+                              <Font name="System Bold" size="16.0" />
+                           </font>
+                        </JFXTextField>
+                        <JFXTextField fx:id="txtTelefoneFuncionario" focusColor="WHITE" layoutX="84.0" layoutY="223.0" promptText="Telefone do Funcionário" />
+                     </children>
+                  </AnchorPane>
+            </content>
+               <graphic>
+                  <ImageView fitHeight="46.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../model/images/icons8_replace_60px_3.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+          </Tab>
+          <Tab>
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+               <graphic>
+                  <ImageView fitHeight="46.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../../../../AppData/Local/Temp/icons8_female_worker_50px.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+          </Tab>
+        </tabs>
+      </TabPane>
+      <Pane layoutX="-1.0" layoutY="209.0" prefHeight="480.0" prefWidth="69.0" style="-fx-background-color: #545E6A; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
    </children>
 </AnchorPane>
