--- a/src/gui/views/ViewSalario.fxml
+++ b/src/gui/views/ViewSalario.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -11,12 +12,12 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="342.0" prefWidth="304.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewSalarioController">
+<AnchorPane prefHeight="385.0" prefWidth="355.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewSalarioController">
    <children>
-      <GridPane hgap="5.0" layoutX="14.0" layoutY="200.0" prefHeight="129.0" prefWidth="273.0" vgap="10.0">
+      <GridPane hgap="5.0" layoutX="41.0" layoutY="193.0" prefHeight="129.0" prefWidth="273.0" vgap="10.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="219.0" minWidth="10.0" prefWidth="99.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="199.0" minWidth="10.0" prefWidth="169.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="219.0" minWidth="10.0" prefWidth="124.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="199.0" minWidth="10.0" prefWidth="144.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -27,26 +28,28 @@
          <children>
             <Label text="Funcionário:" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
             <Label text="Salário devido:" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
-            <TextField fx:id="tfSalario" editable="false" minHeight="18.0" minWidth="20.0" prefHeight="25.0" prefWidth="167.0" promptText="Sálario do funcionário" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+            <TextField fx:id="tfSalario" minHeight="18.0" minWidth="20.0" prefHeight="25.0" prefWidth="167.0" promptText="Sálario do funcionário" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets right="80.0" />
                </GridPane.margin>
             </TextField>
             <TextField fx:id="tfFuncionario" editable="false" promptText="Nome do funcionário" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Button fx:id="btPagar" mnemonicParsing="false" onAction="#onBtPagarAction" text="Pagar" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
             <Label text="CPF" GridPane.halignment="RIGHT" />
             <TextField fx:id="tfCpf" disable="true" editable="false" promptText="CPF fo funcionário" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets right="50.0" />
                </GridPane.margin>
             </TextField>
+            <ComboBox fx:id="cbFormaPagamento" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label text="Forma de Pagamento:" GridPane.rowIndex="3" />
          </children>
       </GridPane>
-      <TableView fx:id="tvFuncionario" layoutX="15.0" layoutY="14.0" onMouseClicked="#selecionaFuncionario" prefHeight="167.0" prefWidth="273.0">
+      <TableView fx:id="tvFuncionario" layoutX="15.0" layoutY="14.0" onMouseClicked="#selecionaFuncionario" prefHeight="167.0" prefWidth="326.0">
         <columns>
-          <TableColumn fx:id="colunaFuncionario" prefWidth="148.0" text="Funcionário" />
-          <TableColumn fx:id="colunaSalario" prefWidth="123.0" text="Salário" />
+          <TableColumn fx:id="colunaFuncionario" prefWidth="201.0" text="Funcionário" />
+          <TableColumn fx:id="colunaSalario" prefWidth="124.0" text="Salário" />
         </columns>
       </TableView>
+      <Button fx:id="btPagar" layoutX="267.0" layoutY="350.0" mnemonicParsing="false" onAction="#onBtPagarAction" text="Pagar" />
    </children>
 </AnchorPane>
