--- a/src/gui/views/ViewCliente.fxml
+++ b/src/gui/views/ViewCliente.fxml
@@ -21,7 +21,7 @@
 
 <AnchorPane fx:id="apCentral" maxHeight="50000.0" maxWidth="50000.0" minHeight="0.0" minWidth="0.0" prefHeight="695.0" prefWidth="880.0" stylesheets="@css/styleTabCliente.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewClienteController">
    <children>
-      <TabPane fx:id="tpCentral" layoutX="-5.0" layoutY="-5.0" prefHeight="625.0" prefWidth="887.0" side="LEFT" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="-1.0" AnchorPane.topAnchor="-5.0">
+      <TabPane fx:id="tpCentral" layoutX="-6.0" layoutY="-6.0" prefHeight="625.0" prefWidth="887.0" side="LEFT" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="-6.0">
         <tabs>
           <Tab fx:id="tabTabela" closable="false">
             <content>
@@ -30,7 +30,7 @@
                         <Pane layoutX="27.0" layoutY="15.0" opacity="0.09" prefHeight="451.0" prefWidth="778.0" style="-fx-background-color: white; -fx-background-radius: 1em;" />
                         <TableView fx:id="tvCliente" layoutX="37.0" layoutY="56.0" prefHeight="401.0" prefWidth="758.0" style="-fx-border-radius: 1em; -fx-background-radius: 0em 0em  1em 1em; -fx-background-color: bfbfbf;">
                           <columns>
-                            <TableColumn fx:id="colunaId" minWidth="0.0" prefWidth="50.0" text="ID">
+                            <TableColumn fx:id="colunaId" minWidth="0.0" prefWidth="60.0" text="ID">
                                  <graphic>
                                     <ImageView fitHeight="71.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -39,7 +39,7 @@
                                     </ImageView>
                                  </graphic>
                               </TableColumn>
-                            <TableColumn fx:id="colunaNome" prefWidth="229.0" text="Nome">
+                            <TableColumn fx:id="colunaNome" prefWidth="194.0" text="Nome">
                                  <graphic>
                                     <ImageView fitHeight="71.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -48,7 +48,7 @@
                                     </ImageView>
                                  </graphic>
                               </TableColumn>
-                              <TableColumn fx:id="colunaRedeSocial" prefWidth="102.0" text="Rede Social">
+                              <TableColumn fx:id="colunaRedeSocial" prefWidth="124.0" text="Rede Social">
                                  <graphic>
                                     <ImageView fitHeight="71.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -57,7 +57,7 @@
                                     </ImageView>
                                  </graphic>
                               </TableColumn>
-                              <TableColumn fx:id="colunaEmail" prefWidth="150.0" text="Email">
+                              <TableColumn fx:id="colunaEmail" prefWidth="172.0" text="Email">
                                  <graphic>
                                     <ImageView fitHeight="71.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -66,7 +66,7 @@
                                     </ImageView>
                                  </graphic>
                               </TableColumn>
-                              <TableColumn fx:id="colunaTelefone" prefWidth="125.0" text="Telefone">
+                              <TableColumn fx:id="colunaTelefone" prefWidth="106.0" text="Telefone">
                                  <graphic>
                                     <ImageView fitHeight="71.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -102,19 +102,19 @@
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </JFXTextField>
-                        <JFXButton fx:id="btExcluiCliente" layoutX="88.0" layoutY="595.0" onAction="#excluirCliente" prefHeight="17.0" prefWidth="123.0" ripplerFill="WHITE" text="Excluir" textFill="WHITE">
+                        <JFXButton fx:id="btExcluiCliente" layoutX="74.0" layoutY="595.0" onAction="#excluirCliente" prefHeight="17.0" prefWidth="123.0" ripplerFill="WHITE" text="Excluir" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
                            <graphic>
                               <ImageView fitHeight="28.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../../../../../AppData/Local/Temp/icons8_trash_60px.png" />
+                                    <Image url="@../../model/images/icons8_trash_60px_1.png" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXButton fx:id="btPesquisar" layoutX="222.0" layoutY="595.0" onAction="#buscaOperacoes" prefHeight="18.0" prefWidth="127.0" ripplerFill="WHITE" text="Pesquisar" textFill="WHITE">
+                        <JFXButton fx:id="btPesquisar" layoutX="207.0" layoutY="595.0" onAction="#buscaOperacoes" prefHeight="37.0" prefWidth="142.0" ripplerFill="WHITE" text="Pesquisar" textFill="WHITE">
                            <graphic>
                               <ImageView fitHeight="28.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -130,8 +130,8 @@
                         <GridPane layoutX="435.0" layoutY="524.0" prefHeight="74.0" prefWidth="320.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="84.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="117.0" minWidth="10.0" prefWidth="114.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="10.0" prefWidth="120.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="117.0" minWidth="10.0" prefWidth="107.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="131.0" minWidth="10.0" prefWidth="128.0" />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -140,31 +140,31 @@
                            <children>
                               <JFXRadioButton fx:id="rbId" style="-jfx-selected-color: #ff4747;" text="ID" textFill="WHITE">
                                  <font>
-                                    <Font name="System Bold" size="16.0" />
+                                    <Font name="System Bold" size="14.0" />
                                  </font></JFXRadioButton>
                               <JFXRadioButton fx:id="rbNome" style="-jfx-selected-color: #ff4747;" text="Nome" textFill="WHITE" GridPane.columnIndex="1">
                                  <font>
-                                    <Font name="System Bold" size="16.0" />
+                                    <Font name="System Bold" size="14.0" />
                                  </font>
                               </JFXRadioButton>
                               <JFXRadioButton fx:id="rbEmail" style="-jfx-selected-color: #ff4747;" text="Email" textFill="WHITE" GridPane.rowIndex="1">
                                  <font>
-                                    <Font name="System Bold" size="16.0" />
+                                    <Font name="System Bold" size="14.0" />
                                  </font>
                               </JFXRadioButton>
                               <JFXRadioButton fx:id="rbTelefone" style="-jfx-selected-color: #ff4747;" text="Telefone" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                  <font>
-                                    <Font name="System Bold" size="16.0" />
+                                    <Font name="System Bold" size="14.0" />
                                  </font>
                               </JFXRadioButton>
                               <JFXRadioButton fx:id="rbRedeSocial" style="-jfx-selected-color: #ff4747;" text="Rede Social" textFill="WHITE" GridPane.columnIndex="2">
                                  <font>
-                                    <Font name="System Bold" size="16.0" />
+                                    <Font name="System Bold" size="14.0" />
                                  </font>
                               </JFXRadioButton>
                               <JFXRadioButton fx:id="rbTodos" selected="true" style="-jfx-selected-color: #ff4747;" text="Todos" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                  <font>
-                                    <Font name="System Bold" size="16.0" />
+                                    <Font name="System Bold" size="14.0" />
                                  </font>
                               </JFXRadioButton>
                            </children>
@@ -220,7 +220,7 @@
               <AnchorPane fx:id="tabClienteAp" minHeight="0.0" minWidth="0.0" prefHeight="642.0" prefWidth="790.0">
                      <children>
                         <Pane layoutX="23.0" layoutY="26.0" opacity="0.09" prefHeight="442.0" prefWidth="345.0" style="-fx-background-color: white; -fx-background-radius: 1em;" />
-                        <Label layoutX="150.0" layoutY="55.0" text="Campo mínimo: Nome" textFill="RED">
+                        <Label layoutX="162.0" layoutY="55.0" text="Campo mínimo: Nome" textFill="RED">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font></Label>
@@ -281,17 +281,17 @@
                               <Image url="@../../model/images/icons8_instagram_60px.png" />
                            </image>
                         </ImageView>
-                        <JFXTextField fx:id="txtTelefoneCliente" focusColor="WHITE" layoutX="44.0" layoutY="342.0" prefHeight="0.0" prefWidth="311.0" promptText="Telefone do cliente" style="-fx-border-color: #545E6A; -fx-text-fill: #00ff94; -fx-prompt-text-fill: #e1e1e1; -fx-background-color: #545E6A; -fx-background-radius: 0.5em; -fx-border-radius: 0.5em; -fx-border-color: #e1e1e1;" unFocusColor="#2c2e33">
+                        <JFXTextField fx:id="txtTelefoneCliente" focusColor="WHITE" layoutX="44.0" layoutY="338.0" prefHeight="0.0" prefWidth="311.0" promptText="Telefone do cliente" style="-fx-border-color: #545E6A; -fx-text-fill: #00ff94; -fx-prompt-text-fill: #e1e1e1; -fx-background-color: #545E6A; -fx-background-radius: 0.5em; -fx-border-radius: 0.5em; -fx-border-color: #e1e1e1;" unFocusColor="#2c2e33">
                            <font>
                               <Font name="System Bold" size="17.0" />
                            </font>
                         </JFXTextField>
-                        <Label layoutX="89.0" layoutY="316.0" text="Telefone:" textFill="WHITE">
+                        <Label layoutX="89.0" layoutY="312.0" text="Telefone:" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="19.0" />
                            </font>
                         </Label>
-                        <ImageView fitHeight="40.0" fitWidth="47.0" layoutX="44.0" layoutY="301.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="40.0" fitWidth="47.0" layoutX="44.0" layoutY="297.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../model/images/icons8_phone_64px.png" />
                            </image>
@@ -323,7 +323,7 @@
                         <Pane layoutX="27.0" layoutY="15.0" opacity="0.09" prefHeight="451.0" prefWidth="778.0" style="-fx-background-color: white; -fx-background-radius: 1em;" />
                         <TableView fx:id="tvClienteAtualizacao" layoutX="37.0" layoutY="56.0" onMouseClicked="#selecionaCliente" prefHeight="401.0" prefWidth="758.0" style="-fx-border-radius: 1em; -fx-background-radius: 0em 0em  1em 1em; -fx-background-color: bfbfbf;">
                            <columns>
-                              <TableColumn fx:id="colunaIdAtualizacao" minWidth="0.0" prefWidth="50.0" text="ID">
+                              <TableColumn fx:id="colunaIdAtualizacao" minWidth="0.0" prefWidth="61.0" text="ID">
                                  <graphic>
                                     <ImageView fitHeight="71.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -332,7 +332,7 @@
                                     </ImageView>
                                  </graphic>
                               </TableColumn>
-                              <TableColumn fx:id="colunaNomeAtualizacao" prefWidth="252.0" text="Nome">
+                              <TableColumn fx:id="colunaNomeAtualizacao" prefWidth="241.0" text="Nome">
                                  <graphic>
                                     <ImageView fitHeight="71.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -370,9 +370,9 @@
                               </TableColumn>
                            </columns>
                         </TableView>
-                        <Pane layoutX="10.0" layoutY="15.0" prefHeight="30.0" prefWidth="89.0" style="-fx-background-color: white; -fx-background-radius: 1em; -fx-background-color: bfbfbf;">
+                        <Pane layoutX="10.0" layoutY="15.0" prefHeight="30.0" prefWidth="99.0" style="-fx-background-color: white; -fx-background-radius: 1em; -fx-background-color: bfbfbf;">
                            <children>
-                              <Label alignment="CENTER" layoutX="1.0" prefHeight="28.0" prefWidth="88.0" text="Clientes" textAlignment="CENTER">
+                              <Label alignment="CENTER" layoutX="5.0" layoutY="1.0" prefHeight="28.0" prefWidth="88.0" text="Clientes" textAlignment="CENTER">
                                  <font>
                                     <Font name="System Bold" size="19.0" />
                                  </font>
@@ -383,9 +383,9 @@
                            </opaqueInsets>
                         </Pane>
                         <Pane layoutX="28.0" layoutY="476.0" opacity="0.09" prefHeight="211.0" prefWidth="777.0" style="-fx-background-color: white; -fx-background-radius: 1em;" />
-                        <Pane layoutX="10.0" layoutY="476.0" prefHeight="30.0" prefWidth="121.0" style="-fx-background-color: white; -fx-background-radius: 1em; -fx-background-color: bfbfbf;">
+                        <Pane layoutX="10.0" layoutY="476.0" prefHeight="30.0" prefWidth="135.0" style="-fx-background-color: white; -fx-background-radius: 1em; -fx-background-color: bfbfbf;">
                            <children>
-                              <Label alignment="CENTER" layoutX="-2.0" prefHeight="28.0" prefWidth="127.0" text="Atualização" textAlignment="CENTER">
+                              <Label alignment="CENTER" layoutX="5.0" prefHeight="28.0" prefWidth="127.0" text="Atualização" textAlignment="CENTER">
                                  <font>
                                     <Font name="System Bold" size="19.0" />
                                  </font>
@@ -472,7 +472,7 @@
                               <Image url="@../../model/images/icons8_tags_60px_2.png" />
                            </image>
                         </ImageView>
-                        <JFXButton fx:id="btLimpar" layoutX="666.0" layoutY="586.0" onAction="#limpaCampos" prefHeight="44.0" prefWidth="123.0" ripplerFill="WHITE" text="Limpar" textFill="WHITE">
+                        <JFXButton fx:id="btLimpar" layoutX="657.0" layoutY="586.0" onAction="#limpaCampos" prefHeight="44.0" prefWidth="132.0" ripplerFill="WHITE" text="Limpar" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
